- support palette cycling for views too - make view palettes update live while modifying palette

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1565,30 +1565,31 @@ BEGIN
     CONTROL         "Export &message text",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,84,83,10
 END
 
-IDD_PALETTE_EDITOR DIALOGEX 0, 0, 293, 255
+IDD_PALETTE_EDITOR DIALOGEX 0, 0, 293, 262
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "VGA Palette Editor"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Close",IDCANCEL,226,234,60,14
+    PUSHBUTTON      "Cancel",IDCANCEL,226,241,60,14
     CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,212,190
-    PUSHBUTTON      "Revert",IDC_BUTTONREVERT,226,217,60,14
+    PUSHBUTTON      "Revert",IDC_BUTTONREVERT,226,204,60,14
     CONTROL         "Used color",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,10,49,10
-    PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,226,38,60,14
-    EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,167,60,14
-    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,133,60,14
+    PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,226,34,60,14
+    EDITTEXT        IDC_EDIT1,7,200,212,32,ES_MULTILINE | ES_READONLY
+    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,157,60,14
+    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,125,60,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
-    EDITTEXT        IDC_EDITRANGE,226,87,60,45,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,54,60,14
-    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,150,60,14
-    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,183,60,14
-    CONTROL         "Preview palette cycling",IDC_CHECKPREVIEWCYCLING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,117,233,100,10
-    CONTROL         "<-",IDC_BUTTONCYCLELEFT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,64,231,19,15
-    CONTROL         "->",IDC_BUTTONCYCLERIGHT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,88,230,20,16
-    PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,226,70,60,14
-    PUSHBUTTON      "Add as &resource",IDC_BUTTON_SAVEPALETTE,226,200,60,14
-    CONTROL         "",IDC_SLIDERCYCLESPEED,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,8,230,48,15
+    EDITTEXT        IDC_EDITRANGE,226,82,60,42,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,50,60,14
+    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,141,60,14
+    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,172,60,14
+    CONTROL         "Preview palette cycling",IDC_CHECKPREVIEWCYCLING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,117,240,61,10
+    CONTROL         "<-",IDC_BUTTONCYCLELEFT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,64,238,19,15
+    CONTROL         "->",IDC_BUTTONCYCLERIGHT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,88,237,20,16
+    PUSHBUTTON      "&Adjust",IDC_BUTTONADJUSTMENTS,226,66,60,14
+    PUSHBUTTON      "Add as &resource",IDC_BUTTON_SAVEPALETTE,226,188,60,14
+    CONTROL         "",IDC_SLIDERCYCLESPEED,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,8,237,48,15
+    DEFPUSHBUTTON   "Accept",IDOK,226,225,60,14
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
@@ -2497,7 +2498,7 @@ BEGIN
         RIGHTMARGIN, 286
         VERTGUIDE, 226
         TOPMARGIN, 7
-        BOTTOMMARGIN, 248
+        BOTTOMMARGIN, 255
     END
 
     IDD_PALETTE_EDITOR_EMBEDDED, DIALOG
