--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -429,6 +429,12 @@
     <Image Include="Docs\source\images\Waterfall.gif">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Docs\source\images\LogoCycle.gif">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\LogoSetColors.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\SCICompanion.rc2">
@@ -1021,7 +1027,6 @@
     <None Include="Docs\source\views.rst" />
     <None Include="Docs\source\vocabs.rst" />
     <None Include="Docs\source\includes\standard.rst" />
-    <None Include="Docs\source\importimages.rst" />
     <None Include="Docs\source\rastertools.rst" />
     <None Include="Docs\source\cursors.rst" />
     <None Include="Docs\source\fonts.rst" />
