- update dosbox.conf included in template games - set up a profile system so you can switch between running the game with DOSBox, ScummVM or something else - ensure when you create a game, it's easy to run

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -1,3 +1,8 @@
+;======================================
+; SCI Companion SCI1.1 Template Game Project File
+; By Phil Fortier
+;======================================
+
 [Script]
 n000=Main
 n032=DColorButton
@@ -92,18 +97,21 @@ n010=debughandler
 n016=debugroominit
 
 [Game]
-Executable=run.cmd
-ExeCmdLineParameters=
 Name=Template Game
+ScummId=lsl6-cd
 Language=sc
+
 [Map]
 n65535=n0-1
+
 [Vocab]
 n997=SelectorTable
 n996=ClassTable
+
 [Pic]
 n200=DeathRoom
 n100=TitleScreen
+
 [View]
 n991=InventoryActions
 n990=Actions
@@ -117,15 +125,18 @@ n995=SettingsViews
 n2099=DeathButtons
 n2000=DeathView
 n999=MainCursor
+
 [Audio]
 n005=ED-11-8
 n006=ED-11-16
 n007=ED-22-8
 n008=ED-22-16
+
 [Font]
 n3002=SierraSans4
 n999=Debug
 n004=Small
+
 [Message]
 n020=DeathRoom
 n015=Inventory
