--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1097,22 +1097,24 @@ BEGIN
     CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,246,172,12
 END
 
-IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 213, 106
+IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 351, 122
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTEXTHELP
 CAPTION "Game properties"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,98,85,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,156,85,50,14
-    LTEXT           "Game &name:",IDC_STATICGAMENAME,14,24,41,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITGAMENAME,63,21,88,14,ES_AUTOHSCROLL
-    LTEXT           "&Executable:",IDC_STATICEXE,15,45,40,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITEXECUTABLE,63,42,88,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,158,42,40,14
-    GROUPBOX        "General",IDC_STATICGENERAL,6,7,200,77
-    EDITTEXT        IDC_EDITEXECUTABLEPARAMETERS,63,63,88,14,ES_AUTOHSCROLL
-    LTEXT           "Exe params:",IDC_STATICEXEPARAM,14,66,41,8,0,WS_EX_RIGHT
+    DEFPUSHBUTTON   "OK",IDOK,232,101,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,294,101,50,14
+    LTEXT           "Game &name:",IDC_STATICGAMENAME,25,24,41,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITGAMENAME,74,21,208,14,ES_AUTOHSCROLL
+    LTEXT           "&Executable:",IDC_STATICEXE,26,63,40,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITEXECUTABLE,74,60,208,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,295,59,47,14
+    GROUPBOX        "General",IDC_STATICGENERAL,6,7,338,93
+    EDITTEXT        IDC_EDITEXECUTABLEPARAMETERS,74,81,208,14,ES_AUTOHSCROLL
+    LTEXT           "Exe params:",IDC_STATICEXEPARAM,25,84,41,8,0,WS_EX_RIGHT
+    LTEXT           "Active &profile:",IDC_STATICPROFILE,15,43,51,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBOPROFILE,74,41,70,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_CLASSBROWSERDIALOG DIALOGEX 0, 0, 454, 293
@@ -2227,12 +2229,12 @@ BEGIN
     IDD_GAMEPROPERTIESDIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 6
-        RIGHTMARGIN, 206
-        VERTGUIDE, 55
-        VERTGUIDE, 63
-        VERTGUIDE, 151
+        RIGHTMARGIN, 344
+        VERTGUIDE, 66
+        VERTGUIDE, 74
+        VERTGUIDE, 282
         TOPMARGIN, 7
-        BOTTOMMARGIN, 99
+        BOTTOMMARGIN, 115
     END
 
     IDD_CLASSBROWSERDIALOG, DIALOG
