--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -25,6 +25,9 @@
     <Text Include="Files\Samples\PhonemeSentence.txt" />
     <Text Include="Files\TemplateGame\SCI0.txt" />
     <Text Include="Files\TemplateGame\SCI1.1.txt" />
+    <Text Include="Files\License.txt" />
+    <Text Include="Files\COPYING2" />
+    <Text Include="Files\COPYING" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanion.h">
