--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -816,6 +816,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="res\SCICompanion.rc2">
       <SubType>Designer</SubType>
     </None>
+    <None Include="SCICompanion.licenseheader" />
     <None Include="Tools\DOSBox\DOSBox 0.74 Options.bat" />
     <None Include="Tools\DOSBox\DOSBox.exe" />
     <None Include="Tools\DOSBox\Reset KeyMapper.bat" />
