- basic support for reading SCI2 - improve gdiplus error msg

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1443,7 +1443,8 @@ BEGIN
     CONTROL         "SCI 0",IDC_RADIOSCI7,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,96,33,10
     CONTROL         "SCI 1.0",IDC_RADIOSCI8,"Button",BS_AUTORADIOBUTTON,23,110,40,10
     CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,124,40,10
-    GROUPBOX        "Resource package fmt",IDC_STATIC6,7,83,87,57,WS_GROUP
+    CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,138,40,10
+    GROUPBOX        "Resource package fmt",IDC_STATIC6,7,83,87,69,WS_GROUP
     CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,195,53,8
     CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,156,69,10
     CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,169,49,10
