- basic support for SCI2 pics 320x200

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -2736,6 +2736,8 @@ BEGIN
 0x4756, 0x2041, 0x0031, 
     IDC_COMBO2, 0x403, 8, 0
 0x4756, 0x2041, 0x2e31, 0x0031, 
+    IDC_COMBO2, 0x403, 6, 0
+0x4756, 0x2041, 0x0032, 
     IDC_COMBO3, 0x403, 5, 0
 0x6f4e, 0x656e, "\000" 
     IDC_COMBO3, 0x403, 5, 0
