--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1433,18 +1433,19 @@ BEGIN
     CONTROL         "SCI 0+",IDC_RADIOSCI0_1,"Button",BS_AUTORADIOBUTTON,23,34,39,10
     CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,48,40,10
     CONTROL         "SCI 1.1",IDC_RADIOSCI6,"Button",BS_AUTORADIOBUTTON,23,63,40,10
-    GROUPBOX        "Resource map format",IDC_STATIC1,7,7,87,72,WS_GROUP
+    CONTROL         "SCI 2",IDC_RADIOSCI11,"Button",BS_AUTORADIOBUTTON,23,76,33,10
+    GROUPBOX        "Resource map format",IDC_STATIC1,7,7,87,85,WS_GROUP
     CONTROL         "SCI0",IDC_RADIOSCI2,"Button",BS_AUTORADIOBUTTON | WS_GROUP,121,20,31,10
     CONTROL         "SCI1",IDC_RADIOSCI3,"Button",BS_AUTORADIOBUTTON,121,33,31,10
     GROUPBOX        "Compression format",IDC_STATIC2,110,7,80,46,WS_GROUP
     CONTROL         "SCI0",IDC_RADIOSCI4,"Button",BS_AUTORADIOBUTTON | WS_GROUP,216,19,31,10
     CONTROL         "SCI1",IDC_RADIOSCI5,"Button",BS_AUTORADIOBUTTON,216,33,31,10
     GROUPBOX        "Sound format",IDC_STATIC3,206,7,86,46,WS_GROUP
-    CONTROL         "SCI 0",IDC_RADIOSCI7,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,96,33,10
-    CONTROL         "SCI 1.0",IDC_RADIOSCI8,"Button",BS_AUTORADIOBUTTON,23,110,40,10
-    CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,124,40,10
-    CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,138,40,10
-    GROUPBOX        "Resource package fmt",IDC_STATIC6,7,83,87,69,WS_GROUP
+    CONTROL         "SCI 0",IDC_RADIOSCI7,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,111,33,10
+    CONTROL         "SCI 1.0",IDC_RADIOSCI8,"Button",BS_AUTORADIOBUTTON,23,125,40,10
+    CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,139,40,10
+    CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,153,40,10
+    GROUPBOX        "Resource package fmt",IDC_STATIC6,7,98,87,69,WS_GROUP
     CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,195,53,8
     CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,156,69,10
     CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,169,49,10
@@ -2730,6 +2731,8 @@ BEGIN
 0x4756, 0x2041, 0x0031, 
     IDC_COMBO1, 0x403, 8, 0
 0x4756, 0x2041, 0x2e31, 0x0031, 
+    IDC_COMBO1, 0x403, 6, 0
+0x4756, 0x2041, 0x0032, 
     IDC_COMBO2, 0x403, 4, 0
 0x4745, 0x0041, 
     IDC_COMBO2, 0x403, 6, 0
