- follow up fix

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1423,12 +1423,12 @@ BEGIN
     CONTROL         "Check1",IDC_CHECKDELETE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,7,47,172,23
 END
 
-IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 242
+IDD_DIALOGVERSION DIALOGEX 0, 0, 309, 254
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Version detector"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,252,221,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,252,233,50,14
     CONTROL         "SCI 0",IDC_RADIOSCI0,"Button",BS_AUTORADIOBUTTON | WS_GROUP,23,20,33,10
     CONTROL         "SCI 0+",IDC_RADIOSCI0_1,"Button",BS_AUTORADIOBUTTON,23,34,39,10
     CONTROL         "SCI 1.0",IDC_RADIOSCI1,"Button",BS_AUTORADIOBUTTON,23,48,40,10
@@ -1446,18 +1446,18 @@ BEGIN
     CONTROL         "SCI 1.1",IDC_RADIOSCI9,"Button",BS_AUTORADIOBUTTON,23,139,40,10
     CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,153,40,10
     GROUPBOX        "Resource package fmt",IDC_STATIC6,7,98,87,69,WS_GROUP
-    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,195,53,8
+    CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,209,53,8
     CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,156,69,10
     CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,169,49,10
-    DEFPUSHBUTTON   "Reload game",IDOK,167,221,81,14
+    DEFPUSHBUTTON   "Reload game",IDOK,167,233,81,14
     COMBOBOX        IDC_COMBO1,206,57,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "View format",IDC_STATIC4,161,60,39,8
     COMBOBOX        IDC_COMBO2,206,75,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Pic format",IDC_STATIC5,166,77,33,8
-    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,221,87,14
+    PUSHBUTTON      "View resource map",IDC_BUTTON1,7,233,87,14
     CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,195,93,10
-    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,207,91,10
-    PUSHBUTTON      "View message map",IDC_BUTTON2,7,201,87,14
+    CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,221,91,10
+    PUSHBUTTON      "View message map",IDC_BUTTON2,7,216,87,14
     CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,182,81,10
     CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,208,68,10
     CONTROL         "Separate msg map",IDC_CHECK10,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,169,75,10
@@ -1471,6 +1471,7 @@ BEGIN
     CONTROL         "Supports message audio",IDC_CHECK12,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,182,89,10
     COMBOBOX        IDC_COMBO6,206,107,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Main audio map #",IDC_STATIC12,141,109,58,8
+    CONTROL         "Audio is wav format",IDC_CHECK13,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,195,89,10
 END
 
 IDD_DIALOGCHOOSECOLORVGA DIALOGEX 0, 0, 152, 152
@@ -2448,7 +2449,7 @@ BEGIN
         VERTGUIDE, 110
         VERTGUIDE, 206
         TOPMARGIN, 7
-        BOTTOMMARGIN, 235
+        BOTTOMMARGIN, 247
     END
 
     IDD_DIALOGCHOOSECOLORVGA, DIALOG
