- fix missing messages in KQ7

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1447,21 +1447,20 @@ BEGIN
     CONTROL         "SCI 2.0",IDC_RADIOSCI10,"Button",BS_AUTORADIOBUTTON,23,153,40,10
     GROUPBOX        "Resource package fmt",IDC_STATIC6,7,98,87,69,WS_GROUP
     CONTROL         "Has palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,209,53,8
-    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,156,69,10
-    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,169,49,10
+    CONTROL         "Grayscale cursor",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,169,69,10
+    CONTROL         "SCI1 code",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,182,49,10
     DEFPUSHBUTTON   "Reload game",IDOK,167,233,81,14
     COMBOBOX        IDC_COMBO1,206,57,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "View format",IDC_STATIC4,161,60,39,8
     COMBOBOX        IDC_COMBO2,206,75,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Pic format",IDC_STATIC5,166,77,33,8
     PUSHBUTTON      "View resource map",IDC_BUTTON1,7,233,87,14
-    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,195,93,10
+    CONTROL         "Separate heap resource",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,208,93,10
     CONTROL         "Parser vocab 900",IDC_CHECK7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,221,91,10
     PUSHBUTTON      "View message map",IDC_BUTTON2,7,216,87,14
-    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,182,81,10
-    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,208,68,10
-    CONTROL         "Separate msg map",IDC_CHECK10,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,169,75,10
-    CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,156,78,10
+    CONTROL         "Early SCI0 script res",IDC_CHECK8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,195,81,10
+    CONTROL         "SCI 1.1 palettes",IDC_CHECK9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,206,221,68,10
+    CONTROL         "Supports messages",IDC_CHECK11,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,169,78,10
     COMBOBOX        IDC_COMBO3,206,91,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Audio volume name",IDC_STATIC7,136,93,63,8
     COMBOBOX        IDC_COMBO4,206,123,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -1472,6 +1471,8 @@ BEGIN
     COMBOBOX        IDC_COMBO6,206,107,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Main audio map #",IDC_STATIC12,141,109,58,8
     CONTROL         "Audio is wav format",IDC_CHECK13,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,195,89,10
+    COMBOBOX        IDC_COMBO7,206,155,82,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Message map source",IDC_STATIC13,133,157,68,8
 END
 
 IDD_DIALOGCHOOSECOLORVGA DIALOGEX 0, 0, 152, 152
@@ -2778,6 +2779,12 @@ BEGIN
 0x0030, 
     IDC_COMBO6, 0x403, 6, 0
 0x3536, 0x3335, 0x0035, 
+    IDC_COMBO7, 0x403, 13, 0
+0x6572, 0x6f73, 0x7275, 0x6563, 0x6d2e, 0x7061, "\000" 
+    IDC_COMBO7, 0x403, 12, 0
+0x656d, 0x7373, 0x6761, 0x2e65, 0x616d, 0x0070, 
+    IDC_COMBO7, 0x403, 11, 0
+0x6c61, 0x7274, 0x7365, 0x6d2e, 0x7061, "\000" 
     0
 END
 
