- rearrange headers to avoid full rebuilds

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -354,6 +354,7 @@
     <ClInclude Include="Src\Resources\GameFolderHelper.h" />
     <ClInclude Include="Src\Resources\Pic.h" />
     <ClInclude Include="Src\Resources\ResourceMapEvents.h" />
+    <ClInclude Include="Src\Resources\ResourceSourceFlags.h" />
     <ClInclude Include="Src\Resources\Sync.h" />
     <ClInclude Include="Src\Resources\View.h" />
     <ClInclude Include="Src\Util\AudioProcessing.h" />
